[package]
name = "utxo-dumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "*"
hex_lit = "*"
# The Level DB crate only supports i32 keys :/
# See https://github.com/skade/leveldb/pull/52
# and/or https://github.com/skade/leveldb/pull/53
leveldb = { git = "https://github.com/cassc/leveldb.git", branch = "allow-impl-database-key" }
walkdir = "2.3.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
indicatif = "0.17.8"
itertools = "0.12.1"
